finish seconde section : )

--- a/style.css
+++ b/style.css
@@ -78,3 +78,34 @@ h1{
 img{
     margin-bottom: 50px;
 }
+h2{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+}
+.row-of-blue-divs{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 100%;
+    margin:100px;
+    align-items: center;
+}
+.box-blue{
+    border: 3px solid #3882f6;
+    width :200px;
+    height: 200px;
+    border-radius: 5px;
+}
+.second-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+.p-second{
+    text-align: center;
+    font-size: 18px;
+}
+
