--- a/style.css
+++ b/style.css
@@ -108,4 +108,28 @@ h2{
     text-align: center;
     font-size: 18px;
 }
+.third-section{
+    background-color: #e5e7eb;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+h3{
+    font-size: 36px;
+    font-style:italic;
+    font-weight: lighter;
+    color:#1f2937;
+    text-align: center;
+}
+.p-third{
+    font-size:  18px;
+    text-align: end;
+}
+.p-div{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+}
 
