--- a/style.css
+++ b/style.css
@@ -130,6 +130,50 @@ h3{
 .p-div{
     display: flex;
     justify-content: flex-end;
-    margin-right: 10px;
+    margin-right: 300px;
+}
+.last-section{
+    height:300px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.blue-container{
+    background-color: #3882f6;
+    width:75%;
+    height:  40%;
+    display:flex;
+    flex-direction: row;
+}
+.left{
+    margin-top: 25px;
+    width: 80%;
+    margin-left:50px;
+    display:flex;
+    align-items:center;
+    align-items: flex-start;
+    flex-direction:column;
+}
+h4{
+    font-size: 18px;
+    color:white;
+}
+.last-p{
+    font-size: 24px;
+    color:white; 
+}
+.right{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.btn-last-div{
+    background-color: #3882f6;
+    color:white;
+    width:100px;
+    height: 40px;
+    margin-right: 300px;
+    border:1px solid white;
+    border-radius: 10px;
 }
 
