--- a/style.css
+++ b/style.css
@@ -177,3 +177,11 @@ h4{
     border-radius: 10px;
 }
 
+.footer{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     background-color: #1d2937;
+     color:#e5e7eb;
+     height:75px;
+}
